package creational.factory.pizza;

public enum PizzaType {
  HaiSan, Thom, Oppa, M, Thitbo

}
